# wasm-examples

./: .gitignore  README.md  WASM + Rust.pptx
router/: Cargo.toml  README.md  wrangler.toml
router/src/: lib.rs
tauri-app/: Cargo.toml
tauri-app/src/: app.rs  binds.rs  main.rs
tauri-app/src-tauri/: Cargo.toml
tauri-app/src-tauri/src/: main.rs
